force-app/main/default/objects/Relationship_Team_Role__c/Relationship_Team_Role__c.object-meta.xml
<CustomObject>
    <label>Relationship Team Role</label>
    <nameField>
        <displayFormat>RT-{00000000}</displayFormat>
        <label>Relationship Team Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Team Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>