force-app/main/default/objects/Relationship_Team_Role__c/fields/Relationship_Team__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Team__c</fullName>
    <label>Relationship Team</label>
    <referenceTo>Relationship_Team__c</referenceTo>
    <relationshipLabel>Relationship Team Roles</relationshipLabel>
    <relationshipName>Relationship_Team_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>