force-app/main/default/objects/Relationship_Team_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Commercial Lender</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>